fix signup form in backend